--- a/WebToken/Views/Home/Index.cshtml
+++ b/WebToken/Views/Home/Index.cshtml
@@ -2,7 +2,23 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+  <form action="" method="post">
+<div class="h-screen w-full bg-gradient-to-r from-purple-900 to-pink-900 flex justify-center items-center ">
+    <div class="h-80 w-80 bg-white/40 backdrop-filter backdrop-blur rounded-lg  flex justify-center items-center grid grid-rows-4 gap-4 ">
+        
+        <div class=" grid grid-rows-2 gap-4 row-span-2 w-50 mt-5">
+            <input type="email" class="bg-white p-1  text-sm" placeholder="Username"> 
+            <input  type="password" class="bg-white p-1 text-sm" placeholder="Password">
+        </div>
+        <div class="row-span-1 text-md text-white flex justify-center items-center gap-1 mb-4">
+            <input type="checkbox" class="p-1"> Remember me
+        </div>
+        <div class="  row-span-1 flex justify-center items-center mb-5">
+            <button class="bg-green-900 px-6 py-1 text-white rounded-full">Login</button>
+        </div>
+        
+    </div>
+    </form>
+    
+   
+    
