kayıt ekranına yönlendirme

--- a/WebToken/Views/Home/Index.cshtml
+++ b/WebToken/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <input  type="password" class="bg-white p-1 text-sm" placeholder="Password">
         </div>
         <div class="row-span-1 text-md text-white flex justify-center items-center gap-1 mb-4">
-            <input type="checkbox" class="p-1"> Remember me
+            <a href="/register"> Henüz kayıtlı değil misiniz?</a>
         </div>
         <div class="  row-span-1 flex justify-center items-center mb-5">
             <button class="bg-green-900 px-6 py-1 text-white rounded-full">Login</button>
