Giriş bilgilerini zorunlu tutma

--- a/WebToken/Views/Home/Index.cshtml
+++ b/WebToken/Views/Home/Index.cshtml
@@ -10,9 +10,9 @@
         class="h-80 w-80 bg-white/40 backdrop-filter backdrop-blur rounded-lg  flex justify-center items-center grid grid-rows-4 gap-4 ">
        
             <div class=" grid grid-rows-2 gap-4 row-span-2 w-50 mt-5">
-                <input type="text" name="Username" id="username" class="bg-white p-1  text-sm" placeholder="Username">
+                <input type="text" name="Username" id="username" class="bg-white p-1  text-sm" placeholder="Username " required>
                 <input type="password" name="Password" id="password" class="bg-white p-1 text-sm"
-                    placeholder="Password">
+                    placeholder="Password" required>
             </div>
             <div class="row-span-1 text-md text-white flex justify-center items-center gap-1 mb-4">
                 <a href="/register"> Henüz kayıtlı değil misiniz?</a>
