register page and login page add icon

--- a/WebToken/Views/Home/Index.cshtml
+++ b/WebToken/Views/Home/Index.cshtml
@@ -7,9 +7,12 @@
     class="h-screen w-full bg-gradient-to-r from-purple-900 to-pink-900 flex justify-center items-center flex-col ">
  <form id="userForm">
     <div
-        class="h-80 w-80 bg-white/40 backdrop-filter backdrop-blur rounded-lg  flex justify-center items-center grid grid-rows-4 gap-4 ">
+        class="h-80 w-80 bg-white/40 backdrop-filter backdrop-blur rounded-lg  flex justify-center items-center grid grid-rows-5 gap-4 ">
+        <div class="login-icon row-span-1 flex justify-center items-center gap-4 mb-15">
+                <i class="fa-duotone fa-solid fa-circle-user text-8xl text-white"></i>
+            </div>
        
-            <div class=" grid grid-rows-2 gap-4 row-span-2 w-50 mt-5">
+            <div class=" grid grid-rows-2 gap-4 row-span-2 w-50 mt-3">
                 <input type="text" name="Username" id="username" class="bg-white p-1  text-sm" placeholder="Username " required>
                 <input type="password" name="Password" id="password" class="bg-white p-1 text-sm"
                     placeholder="Password" required>
